src/test/deca/syntax/invalid/EntierTropPetit.deca
{
    float y = 0.4E-4000;
}